# KjopsMinne

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  mise.toml  vercel.json
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_household_ingredients.py  003_inventory.py  004_recipes.py  005_meal_plans.py  006_shopping_lists.py
backend/src/: config.py  main.py
backend/src/api/: admin.py  analytics.py  categories.py  deps.py  households.py  ingredients.py  inventory.py  meal_plans.py  receipts.py  recipes.py  shopping_lists.py  upload.py
backend/src/db/: models.py  seed.py  seed_demo_data.py  seed_ingredients.py  seed_unit_conversions.py  session.py
backend/src/schemas/: analytics.py  household.py  ingredient.py  inventory.py  item.py  meal_plan.py  receipt.py  recipe.py  shopping_list.py
backend/src/services/: categorizer.py  ingredient_matcher.py  inventory_service.py  llm.py  meal_plan_service.py  mock_llm.py  mock_ocr.py  ocr.py  parser.py  recipe_importer.py  restock_predictor.py  shopping_generator.py  textract_ocr.py  unit_converter.py
backend/tests/: conftest.py  test_admin.py  test_ingredient_matcher.py  test_inventory_service.py  test_meal_plan_service.py  test_recipe_importer.py  test_restock_predictor.py  test_shopping_generator.py  test_unit_converter.py
docs/: BUILD_LOG.md  IMPLEMENTATION_PLAN.md  README.md  dark-mode.md
docs/admin/: README.md
docs/api/: README.md  endpoints.md
docs/architecture/: README.md  data-flow.md  database.md
docs/database/: SEEDING.md
docs/deployment/: README.md  render.md  vercel.md
docs/features/: 01-receipt-vault.md  02-warranty-returns.md  03-bank-integration.md  04-transaction-matching.md  05-grocery-intelligence.md  06-household.md  07-norwegian-ocr.md  08-integrations.md  09-auth-security.md  10-business-mode.md  11-i18n.md  12-meal-planning.md  14-recipes.md  14-shopping-lists.md  15-inventory.md  16-leftovers.md  README.md  analytics-dashboard.md
docs/plans/: 2026-01-19-meal-planning-design.md  2026-01-19-phase1-foundation.md  2026-01-20-frontend-recipes-implementation.md  2026-01-20-phase4-meal-planning.md  2026-01-20-phase6-analytics.md
docs/plans/backend/: 2026-01-20-phase2-inventory.md  2026-01-20-phase3-recipes.md  2026-01-20-phase5-shopping-list.md
docs/plans/frontend/: 2026-01-20-frontend-analytics-design.md  2026-01-20-frontend-analytics-implementation.md  2026-01-20-frontend-meal-planning-design.md  2026-01-20-frontend-meal-planning-implementation.md  2026-01-20-frontend-recipes-design.md  2026-01-20-frontend-shopping-list-design.md  2026-01-20-frontend-shopping-list-implementation.md
docs/research/: 2026-01-20-phases-system-research.md
docs/test/: e2e-testing.md
frontend/: .prettierignore  .prettierrc  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
frontend/.claude/agents/: codebase-researcher.md
frontend/public/: manifest.webmanifest
frontend/scripts/: generate-icons.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/[locale]/: layout.tsx  page.tsx
frontend/src/app/analytics/: page.tsx
frontend/src/app/receipts/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: LanguageSwitcher.tsx  MainContent.tsx  MobileNav.tsx  Navigation.tsx  Sidebar.tsx  SidebarContext.tsx  ThemeProvider.tsx  ThemeSwitcher.tsx
frontend/src/components/analytics/: CategoryCard.tsx  CostPerMealCard.tsx  RestockCard.tsx  SpendTrendCard.tsx  (+6 more)
frontend/src/i18n/: routing.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/messages/: en.json  nb.json
frontend/src/test/: setup.ts
(+35 files in other folders)
