[project]
name = "kvitteringshvelv"
version = "0.1.0"
description = "Norwegian Receipt Vault with grocery intelligence"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.12",
    "aiofiles>=24.1.0",
    "pillow>=11.0.0",
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-aiofiles>=24.1.0",
    "pre-commit>=4.0.0",
]
aws = [
    "boto3>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "C90",    # mccabe complexity
    "B",      # flake8-bugbear
    "S",      # flake8-bandit (security)
    "ANN",    # flake8-annotations
    "D",      # pydocstyle
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PL",     # Pylint
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "PERF",   # Perflint
]
ignore = [
    "D100",   # Missing docstring in public module (add later)
    "D101",   # Missing docstring in public class (Pydantic models are self-documenting)
    "D104",   # Missing docstring in public package (add later)
    "D106",   # Missing docstring in public nested class
    "D107",   # Missing docstring in __init__
    "D212",   # Multi-line docstring summary should start at first line (conflicts with D213)
]

[tool.ruff.lint.per-file-ignores]
"alembic/**/*.py" = ["D", "ANN", "N999", "INP001"]  # Alembic files
"tests/**/*.py" = ["S101", "D", "ANN", "PLR2004", "ARG001", "PLC0415"]  # Allow assert, relax rules
"src/api/*.py" = ["ANN201", "B008", "D103", "PLC0415"]  # FastAPI: return types in response_model, Depends() in defaults
"src/db/seed*.py" = ["D", "ANN", "S311", "ARG001"]  # Seed scripts: relax rules
"src/db/session.py" = ["D103"]  # Simple utility function
"src/main.py" = ["D103", "ARG001", "ANN201"]  # FastAPI app setup
"src/services/textract_ocr.py" = ["PLC0415", "ANN204", "B904"]  # Lazy boto3 import
"src/services/recipe_importer.py" = ["ANN401", "PLC0415", "ARG002", "PERF401", "ANN204"]  # BeautifulSoup Any, lazy imports
"src/services/mock_ocr.py" = ["S311", "ARG002"]  # Mock service uses random
"src/services/mock_llm.py" = ["PLC0415", "ANN001"]  # Lazy BeautifulSoup import
"src/services/parser.py" = ["C901"]  # Complex parser, refactoring out of scope
"src/services/inventory_service.py" = ["ANN401"]  # Generic lot type

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 7
max-branches = 12
max-statements = 50

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["src/db/seed*.py", "alembic/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
